feat: introducing new link color according to the changed link style by UX/UI

--- a/src/components/lyne-footer/styles/lyne-footer.component.scss
+++ b/src/components/lyne-footer/styles/lyne-footer.component.scss
@@ -13,7 +13,7 @@
   --_footer-divider-thickness: var(--footer-divider-thickness, 1px);
 
   // Contextual design for lyne-stack
-  --stack-text-color-normal: var(--color-metal-default);
+  --stack-text-color-normal: var(--color-granite-default);
 }
 
 .footer {
