--- a/src/components/lyne-link/styles/lyne-link.component.scss
+++ b/src/components/lyne-link/styles/lyne-link.component.scss
@@ -6,7 +6,7 @@
 :host {
   display: inline-block;
 
-  --text-color-normal: var(--color-metal-default);
+  --text-color-normal: var(--color-granite-default);
   --text-color-hover-focus: var(--color-red125-default);
   --text-color-active: var(--color-red150-default);
 
