--- a/src/components/lyne-stack/styles/lyne-stack.component.scss
+++ b/src/components/lyne-stack/styles/lyne-stack.component.scss
@@ -4,7 +4,7 @@
 @include host-component-properties;
 
 :host {
-  --_stack-text-color-normal: var(--stack-text-color-normal, var(--color-charcoal-default));
+  --_stack-text-color-normal: var(--stack-text-color-normal, var(--color-granite-default));
 }
 
 // Reset
