feat: lyne-stack enhancements

--- a/src/components/lyne-stack/styles/lyne-stack.component.scss
+++ b/src/components/lyne-stack/styles/lyne-stack.component.scss
@@ -71,6 +71,7 @@
   @extend %stack--horizontal;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .stack--horizontal--space-between {
