feat: lyne-link-button width resilience

--- a/src/components/lyne-link-button/styles/lyne-link-button.component.scss
+++ b/src/components/lyne-link-button/styles/lyne-link-button.component.scss
@@ -24,6 +24,7 @@
   @include button();
   text-decoration: none;
   fill: currentColor;
+  width: fit-content;
 
   @include ifForcedColors {
     fill: LinkText;
