--- a/src/components/lyne-footer/styles/lyne-footer.component.scss
+++ b/src/components/lyne-footer/styles/lyne-footer.component.scss
@@ -11,7 +11,7 @@
   --_footer-gap-vertical: var(--footer-gap-vertical, var(--spacing-responsive-l));
   --_footer-background-color: var(--footer-background-color, var(--color-milk-default));
   --_footer-divider-color: var(--footer-divider-color, var(--color-cloud-default));
-  --_footer-divider-thickness: var(--footer-divider-thickness, 1px);
+  --_footer-divider-thickness: var(--footer-divider-thickness, 1);
   --_footer-clock-width: var(--footer-clock-width, 76);
   @include mq($from: small) {
     --_footer-clock-width: var(--footer-clock-width, 112);
@@ -78,6 +78,6 @@
 // the hidden title which always needs to be present
 :not(.title--visually-hidden) + .bottom {
   margin-block-start: pxToRem(var(--spacing-responsive-xl));
-  border-block-start: var(--_footer-divider-thickness) solid var(--_footer-divider-color);
+  border-block-start: pxToRem(var(--_footer-divider-thickness)) solid var(--_footer-divider-color);
   padding-block-start: pxToRem(var(--spacing-fixed-8x));
 }
