--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -6,6 +6,8 @@
 @import "mixins/mixins_typo";
 @import "mixins/mixins_shadows";
 
+@import "mixins/mixins_dev_and_debug";
+
 @mixin listReset {
   list-style: none;
   margin: 0;
