fix: content style

--- a/src/components/lyne-tab/styles/lyne-tab.component.scss
+++ b/src/components/lyne-tab/styles/lyne-tab.component.scss
@@ -6,3 +6,11 @@
 :host {
   --some-color-var: var(--color-black-default);
 }
+
+.tab-content {
+  font-family: var(--typo-type-face-sbb-roman);
+  font-weight: 400;
+  font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);
+  line-height: var(--typo-line-height-body-text);
+  padding: 20px 0;
+}
