--- a/src/components/lyne-tab-label/styles/lyne-tab-label.component.scss
+++ b/src/components/lyne-tab-label/styles/lyne-tab-label.component.scss
@@ -4,9 +4,30 @@
 @include host-component-properties;
 
 :host {
-  --some-color-var: var(--color-black-default);
+  display: flex;
+  align-items: center;
 }
 
-.some-class {
-  color: var(--some-color-var);
+.tab-label {
+  color: var(--color-black-default);
+  line-height: var(--typo-line-height-body-text);
+  font-family: var(--typo-type-face-sbb-bold);
+  font-weight: 700;
+  font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);
+  @include mq($from: medium) {
+    font-size: calc(var(--typo-scale-0-875x) / var(--typo-scale-default) * 1rem);
+  }
+}
+
+.tab-label-icon {
+  padding-left: 4px;
+  slot[name="icon"] {
+    display: block;
+    width: calc(var(--size-icon-ui-small) / var(--typo-scale-default) * 1rem);
+    height: calc(var(--size-icon-ui-small) / var(--typo-scale-default) * 1rem);
+    color: var(--color-metal-default);
+    fill: var(--color-metal-default);
+    font-family: var(--typo-type-face-sbb-roman);
+    font-weight: 400;
+  }
 }
