--- a/src/components/lyne-tab/styles/lyne-tab.component.scss
+++ b/src/components/lyne-tab/styles/lyne-tab.component.scss
@@ -4,7 +4,7 @@
 @include host-component-properties;
 
 :host {
-  --some-color-var: var(--color-black-default);
+  margin-top: 2rem;
 }
 
 .tab-content {
