feat: tab-group added tab animations

--- a/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
+++ b/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
@@ -22,7 +22,9 @@
   line-height: var(--typo-line-height-body-text);
   font-family: var(--typo-type-face-sbb-bold);
   font-weight: 700;
-  font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);
+  font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);  
+  transition: color var(--animation-form-element-state-duration) var(--animation-form-element-state-easing);
+  transition: background-color var(--animation-form-element-state-duration) var(--animation-form-element-state-easing);
   @include mq($from: medium) {
     font-size: calc(var(--typo-scale-0-875x) / var(--typo-scale-default) * 1rem);
   }
