feat: tab-group fixed icon size

--- a/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
+++ b/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
@@ -70,4 +70,11 @@
       color: var(--color-platinum-default);
     }
   }
+  svg {
+    max-height: calc(var(--typo-scale-1-25x) / var(--typo-scale-default) * 1rem);  ;
+    width: auto;
+    @include mq($from: medium) {
+      max-height: calc(var(--typo-scale-1-5x) / var(--typo-scale-default) * 1rem);  ;
+    }
+  }
 }
