--- a/src/components/lyne-tab-label/styles/lyne-tab-label.component.scss
+++ b/src/components/lyne-tab-label/styles/lyne-tab-label.component.scss
@@ -10,6 +10,7 @@
 
 .tab-label {
   display: flex;
+  align-items: center;
   color: var(--color-black-default);
   line-height: var(--typo-line-height-body-text);
   font-family: var(--typo-type-face-sbb-bold);
