--- a/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
+++ b/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
@@ -24,7 +24,7 @@
   line-height: var(--typo-line-height-body-text);
   font-family: var(--typo-type-face-sbb-bold);
   font-weight: 700;
-  font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);  
+  font-size: calc(var(--typo-scale-0-75x) / var(--typo-scale-default) * 1rem);
   transition: color var(--animation-form-element-state-duration) var(--animation-form-element-state-easing);
   transition: background-color var(--animation-form-element-state-duration) var(--animation-form-element-state-easing);
   @include mq($from: medium) {
@@ -73,8 +73,9 @@
       color: var(--color-platinum-default);
       text-decoration: line-through;
     }
-    lyne-tab-amount::part(label-amount) {
+    lyne-tab-amount::part(label-amount), .lyne-tab-amount {
       color: var(--color-platinum-default);
+      text-decoration: none;
     }
   }
   svg {
