--- a/src/components/lyne-grid/styles/lyne-grid.component.scss
+++ b/src/components/lyne-grid/styles/lyne-grid.component.scss
@@ -5,20 +5,22 @@
 
 :host {}
 
-.grid--primary-negative {}
-
 .grid--base {
   @include grid-base();
 }
 
-// .span-full-width {
-//   //::slotted([ slot='span-full-width'] ) {
+.grid--base--top-products {
+  @include grid-base-top-products();
+}
+
+// .top-product-subscription-1 {
+//   //::slotted([ slot='top-product-subscription-1'] ) {
 //     grid-column: 1/-1;
 //   //}
 // }
 
-// .span-half-width--1st {
-//   //::slotted([ slot='span-half-width--1st'] ) {
+// .top-product-1 {
+//   //::slotted([ slot='top-product-1'] ) {
 //     //grid-column: 1/6;
 //   //}
 
@@ -30,8 +32,8 @@
 //     grid-column:  1/6;
 //   }
 // }
-// .span-half-width--2nd {
-//   //::slotted([ slot='span-half-width--2nd'] ) {
+// .top-product-2 {
+//   //::slotted([ slot='top-product-2'] ) {
 //     //grid-column: 7/-1;
 //   //}
 
@@ -44,7 +46,65 @@
 //   }
 // }
 
-.span-full-width {
+
+// // Top product layout
+
+// //   ------------   ------------
+// //   |          |   |          |
+// //   ------------   |          |
+// //                  |          |
+// //   ------------   |          |
+// //   |          |   |          |
+// //   ------------   ------------
+
+// .top-product-subscription-1 {
+//   grid-column: 1/-1;
+//   @include mq($from: medium) {
+//     grid-area: 1 / 5 / 3 / -1;
+//   }
+//   @include mq($from: wide) {
+//     grid-area: 1 / 7 / 3 / -1;
+//   }
+// }
+// .top-product-1 {
+//   grid-column: 1/-1;
+//   @include mq($from: medium) {
+//     grid-area: 1 / 1 / 2 / 5;
+//   }
+//   @include mq($from: wide) {
+//     grid-area: 1 / 1 / 2 / 7;
+//   }
+// }
+// .top-product-2 {
+//   grid-column: 1/-1;
+//   @include mq($from: medium) {
+//     grid-area: 2 / 1 / 3 / 5;
+//   }
+//   @include mq($from: wide) {
+//     grid-area: 2 / 1 / 3 / 7;
+//   }
+// }
+
+
+// Top product layout
+
+//   ------------------------   ------------------------
+//   |                      |   |                      |
+//   ------------------------   |                      |
+//                              |                      |
+//   ------------------------   |                      |
+//   |                      |   |                      |
+//   ------------------------   ------------------------
+//
+//   ------------------------   ------------------------
+//   |                      |   |                      |
+//   ------------------------   |                      |
+//                              |                      |
+//   ------------------------   |                      |
+//   |                      |   |                      |
+//   ------------------------   ------------------------
+
+.top-product-subscription-1 {
   grid-column: 1/-1;
   @include mq($from: medium) {
     grid-area: 1 / 5 / 3 / -1;
@@ -53,7 +113,7 @@
     grid-area: 1 / 7 / 3 / -1;
   }
 }
-.span-half-width--1st {
+.top-product-1 {
   grid-column: 1/-1;
   @include mq($from: medium) {
     grid-area: 1 / 1 / 2 / 5;
@@ -62,12 +122,41 @@
     grid-area: 1 / 1 / 2 / 7;
   }
 }
-.span-half-width--2nd {
+.top-product-2 {
   grid-column: 1/-1;
   @include mq($from: medium) {
     grid-area: 2 / 1 / 3 / 5;
   }
   @include mq($from: wide) {
     grid-area: 2 / 1 / 3 / 7;
+  }
+}
+
+
+.top-product-subscription-2 {
+  grid-column: 1/-1;
+  @include mq($from: medium) {
+    grid-area: 3 / 5 / 5 / -1;
+  }
+  @include mq($from: wide) {
+    grid-area: 3 / 7 / 5 / -1;
+  }
+}
+.top-product-3 {
+  grid-column: 1/-1;
+  @include mq($from: medium) {
+    grid-area: 3 / 1 / 4 / 5;
+  }
+  @include mq($from: wide) {
+    grid-area: 3 / 1 / 4 / 7;
+  }
+}
+.top-product-4 {
+  grid-column: 1/-1;
+  @include mq($from: medium) {
+    grid-area: 4 / 1 / 5 / 5;
+  }
+  @include mq($from: wide) {
+    grid-area: 4 / 1 / 5 / 7;
   }
 }
