--- a/src/components/lyne-grid/styles/lyne-grid.component.scss
+++ b/src/components/lyne-grid/styles/lyne-grid.component.scss
@@ -13,107 +13,25 @@
   @include grid-base-top-products();
 }
 
-// .top-product-subscription-1 {
-//   //::slotted([ slot='top-product-subscription-1'] ) {
-//     grid-column: 1/-1;
-//   //}
-// }
-
-// .top-product-1 {
-//   //::slotted([ slot='top-product-1'] ) {
-//     //grid-column: 1/6;
-//   //}
-
-//   grid-column: 1/-1;
-//   @include mq($from: medium) {
-//     grid-column: 1/4;
-//   }
-//   @include mq($from: wide) {
-//     grid-column:  1/6;
-//   }
-// }
-// .top-product-2 {
-//   //::slotted([ slot='top-product-2'] ) {
-//     //grid-column: 7/-1;
-//   //}
-
-//   grid-column: 1/-1;
-//   @include mq($from: medium) {
-//     grid-column: 3/-1;
-//   }
-//   @include mq($from: wide) {
-//     grid-column:  7/-1;
-//   }
-// }
-
-
-// // Top product layout
-
-// //   ------------   ------------
-// //   |          |   |          |
-// //   ------------   |          |
-// //                  |          |
-// //   ------------   |          |
-// //   |          |   |          |
-// //   ------------   ------------
-
-// .top-product-subscription-1 {
-//   grid-column: 1/-1;
-//   @include mq($from: medium) {
-//     grid-area: 1 / 5 / 3 / -1;
-//   }
-//   @include mq($from: wide) {
-//     grid-area: 1 / 7 / 3 / -1;
-//   }
-// }
-// .top-product-1 {
-//   grid-column: 1/-1;
-//   @include mq($from: medium) {
-//     grid-area: 1 / 1 / 2 / 5;
-//   }
-//   @include mq($from: wide) {
-//     grid-area: 1 / 1 / 2 / 7;
-//   }
-// }
-// .top-product-2 {
-//   grid-column: 1/-1;
-//   @include mq($from: medium) {
-//     grid-area: 2 / 1 / 3 / 5;
-//   }
-//   @include mq($from: wide) {
-//     grid-area: 2 / 1 / 3 / 7;
-//   }
-// }
-
-
 // Top product layout
 
-//   ------------------------   ------------------------
-//   |                      |   |                      |
-//   ------------------------   |                      |
-//                              |                      |
-//   ------------------------   |                      |
-//   |                      |   |                      |
-//   ------------------------   ------------------------
+//   --------------------------------    -------------------------------
+//   |         top-product-1        |   |                              |
+//   --------------------------------   |                              |
+//                                      |  top-product-subscription-1  |
+//   --------------------------------   |                              |
+//   |         top-product-2        |   |                              |
+//   --------------------------------   --------------------------------
 //
-//   ------------------------   ------------------------
-//   |                      |   |                      |
-//   ------------------------   |                      |
-//                              |                      |
-//   ------------------------   |                      |
-//   |                      |   |                      |
-//   ------------------------   ------------------------
+//   --------------------------------   --------------------------------
+//   |         top-product-3        |   |                              |
+//   --------------------------------   |                              |
+//                                      |  top-product-subscription-2  |
+//   --------------------------------   |                              |
+//   |         top-product-4        |   |                              |
+//   --------------------------------   --------------------------------
 
-.top-product-subscription-1 {
-  grid-column: 1/-1;
-  @include mq($from: medium) {
-    grid-area: 1 / 5 / 3 / -1;
-  }
-  @include mq($from: wide) {
-    grid-area: 1 / 7 / 3 / -1;
-  }
-}
-.top-product-1 {
+::slotted([slot='top-product-1']) {
   grid-column: 1/-1;
   @include mq($from: medium) {
     grid-area: 1 / 1 / 2 / 5;
@@ -122,7 +40,7 @@
     grid-area: 1 / 1 / 2 / 7;
   }
 }
-.top-product-2 {
+::slotted([slot='top-product-2']) {
   grid-column: 1/-1;
   @include mq($from: medium) {
     grid-area: 2 / 1 / 3 / 5;
@@ -131,18 +49,7 @@
     grid-area: 2 / 1 / 3 / 7;
   }
 }
-
-
-.top-product-subscription-2 {
-  grid-column: 1/-1;
-  @include mq($from: medium) {
-    grid-area: 3 / 5 / 5 / -1;
-  }
-  @include mq($from: wide) {
-    grid-area: 3 / 7 / 5 / -1;
-  }
-}
-.top-product-3 {
+::slotted([slot='top-product-3']) {
   grid-column: 1/-1;
   @include mq($from: medium) {
     grid-area: 3 / 1 / 4 / 5;
@@ -151,12 +58,30 @@
     grid-area: 3 / 1 / 4 / 7;
   }
 }
-.top-product-4 {
+::slotted([slot='top-product-4']) {
   grid-column: 1/-1;
   @include mq($from: medium) {
     grid-area: 4 / 1 / 5 / 5;
   }
   @include mq($from: wide) {
     grid-area: 4 / 1 / 5 / 7;
+  }
+}
+::slotted([slot='top-product-subscription-1']) {
+  grid-column: 1/-1;
+  @include mq($from: medium) {
+    grid-area: 1 / 5 / 3 / -1;
+  }
+  @include mq($from: wide) {
+    grid-area: 1 / 7 / 3 / -1;
+  }
+}
+::slotted([slot='top-product-subscription-2']) {
+  grid-column: 1/-1;
+  @include mq($from: medium) {
+    grid-area: 3 / 5 / 5 / -1;
+  }
+  @include mq($from: wide) {
+    grid-area: 3 / 7 / 5 / -1;
   }
 }
