--- a/src/global/mixins/mixins_spacing.scss
+++ b/src/global/mixins/mixins_spacing.scss
@@ -3,9 +3,11 @@
   padding-inline-end: pxToRem(var(--page-base-offset-responsive));
 }
 
+//wide--max-content
+
 @mixin page-spacing__inner() {
-  @include mq($from: wide--max-content) {
-    width: pxToRem($breakpoint-wide-min);
+  @include mq($from: wide) {
+    width: calc(pxToRem($breakpoint-wide-min) - (2 * pxToRem(var(--page-base-offset-responsive))));
     margin-inline-start: auto;
     margin-inline-end: auto;
   }
