--- a/src/components/lyne-grid/styles/lyne-grid.component.scss
+++ b/src/components/lyne-grid/styles/lyne-grid.component.scss
@@ -5,15 +5,13 @@
 
 :host {}
 
-.grid--base {
-  @include grid-base();
-}
+////////////////////////////////////////////////////////////////////////
+// Top product layout
+////////////////////////////////////////////////////////////////////////
 
 .grid--base--top-products {
   @include grid-base-top-products();
 }
-
-// Top product layout
 
 //   --------------------------------    -------------------------------
 //   |         top-product-1        |   |                              |
@@ -83,5 +81,33 @@
   }
   @include mq($from: wide) {
     grid-area: 3 / 7 / 5 / -1;
+  }
+}
+
+////////////////////////////////////////////////////////////////////////
+// 8 columns centered (above) layout
+////////////////////////////////////////////////////////////////////////
+
+.grid--base--eight-columns-centered {
+  @include grid-base();
+}
+
+//          --------------------------------------------------
+//          |                 8-cols-centered                |
+//          --------------------------------------------------                             |
+//          --------------------------------------------------
+//          |                       ...                      |
+//          --------------------------------------------------
+//          --------------------------------------------------
+//          |                       ...                      |
+//          --------------------------------------------------
+
+::slotted([slot='eight-columns-centered']) {
+  grid-column: 1/-1;
+  @include mq($from: large) {
+    grid-column: 2/8;
+  }
+  @include mq($from: wide) {
+    grid-column: 3/11;
   }
 }
