feat: grid base

--- a/src/components/lyne-grid/styles/lyne-grid.component.scss
+++ b/src/components/lyne-grid/styles/lyne-grid.component.scss
@@ -5,6 +5,10 @@
 
 :host {}
 
+.grid--base {
+  @include grid-base();
+}
+
 ////////////////////////////////////////////////////////////////////////
 // Top product layout
 ////////////////////////////////////////////////////////////////////////
